// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render MoviesSummary with 1 movie 1`] = `
<div
  className="sub-header"
>
  <div
    className="page-margin"
  >
    <h1
      className="sub-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      movie
       totalling 
      <span>
        $2.35
      </span>
    </h1>
    <div
      className="button--add-movie"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Movie
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render MoviesSummary with multiple movies 1`] = `
<div
  className="sub-header"
>
  <div
    className="page-margin"
  >
    <h1
      className="sub-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      movies
       totalling 
      <span>
        $235,123,409.87
      </span>
    </h1>
    <div
      className="button--add-movie"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Movie
      </Link>
    </div>
  </div>
</div>
`;
